# seed-dl

./: .gitignore  LICENSE  README.md  README.org  pyproject.toml  requirements.txt
seed_dl/: Earl Grey - Headwinds - 2017 (WEB - MP3 - V0 (VBR))-1554235.torrent  Omni Trio - The Haunted Science - 1996 (CD - MP3 - 320)-1046102.torrent  config_example.yaml  ftp_management.py  main.py  notes.org  parsed_args.py  tools.py  torrent_management.py
